Almost done - final tweaks needed

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -9,23 +9,26 @@
   </head>
   <body>
     <header>
-      <div class="search">
-        <label for="search">
-          <img src="./images/search.svg" alt="search icon" />
-        </label>
-        <input type="search" name="search" id="search" />
+      <div class="search-bar">
+        <input type="image" src="./images/search.svg" alt="Search" />
+        <input type="search" name="search" id="search" autocomplete="off" />
       </div>
 
       <div class="options">
-        <img src="./images/notify.svg" alt="notify icon" />
-        <img src="./images/hero.svg" alt="hero icon" class="hero" />
+        <input type="image" src="./images/notify.svg" alt="Notify" />
+        <input
+          type="image"
+          src="./images/hero.svg"
+          alt="Profile"
+          class="round-image"
+        />
         <a href="#">Mahmoud Elnagar</a>
       </div>
 
-      <div class="profile">
-        <img src="./images/hero.svg" alt="hero icon" class="hero" />
-        <p>Hi there,</p>
-        <h2>Mahmoud Elnagar (@m-elnagar)</h2>
+      <div class="user-layout">
+        <img src="./images/hero.svg" alt="hero icon" class="round-image" />
+        <p class="ul-top-text">Hi there,</p>
+        <h2 class="ul-bot-text">Mahmoud Elnagar (@elnagar)</h2>
       </div>
       <div class="actions">
         <button>New</button>
@@ -33,7 +36,7 @@
         <button>Share</button>
       </div>
     </header>
-    <aside class="no-scroller">
+    <aside>
       <div class="logo">
         <img
           src="./images/dashboard.svg"
@@ -117,76 +120,215 @@
         </ul>
       </nav>
     </aside>
-    <main class="no-scroller">
-      <div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae officia
-        itaque sed mollitia incidunt, quasi beatae. Rerum necessitatibus natus
-        vel, cupiditate minus provident, tempora quidem laboriosam doloribus eos
-        quisquam fugit. Nulla corrupti quasi totam, doloremque omnis quos sed
-        eum ad molestiae saepe laudantium perferendis itaque consectetur dolor
-        ab harum commodi odio cumque aut beatae? Nobis nesciunt suscipit dolorum
-        autem accusantium! Excepturi officia, consectetur similique eaque beatae
-        deserunt incidunt laboriosam placeat quam odit laudantium dicta ullam
-        fugit cupiditate magni minus rem dolorem ab voluptatum porro. Deserunt
-        quam perferendis laborum cum fugit! Expedita dolorem saepe velit, eum
-        dicta aliquam sint voluptas quod dolorum sit commodi necessitatibus
-        exercitationem! Aperiam, velit ratione quos qui eius animi saepe commodi
-        sapiente, magnam laudantium facilis! Earum, eveniet. Aut nemo amet
-        labore officia animi deserunt iste eos ad magni voluptatem. Quasi
-        officia praesentium amet? Sunt unde, iusto laborum recusandae sequi
-        maxime minus dolores, adipisci et officiis beatae esse. Veritatis,
-        voluptatibus aperiam. Minima, alias. Accusantium temporibus, asperiores
-        delectus, praesentium, a non ad quisquam ut molestiae voluptate harum
-        earum perferendis doloribus exercitationem tenetur ipsum ducimus. Ad
-        quidem culpa est consequatur. Magnam reprehenderit, eveniet veritatis
-        hic esse perferendis, quia, laborum ipsum architecto commodi ut
-        exercitationem illo veniam praesentium velit alias est error corrupti
-        quidem culpa consequuntur. Officiis sequi et est beatae. Optio rem nobis
-        voluptatem possimus dolores, hic minus amet ad sint. Perferendis, porro
-        dicta! Reprehenderit, veritatis voluptatem rem tenetur provident dicta
-        ex nisi eligendi. Tempora ipsam id iure accusamus doloribus! A deleniti
-        voluptate est iusto! Quibusdam deleniti quam ipsam facilis voluptatum
-        aliquid perferendis amet nostrum dicta eius voluptates fugiat maiores
-        quae similique eum ipsum molestias dolorum necessitatibus, voluptate
-        incidunt consequatur! Ex facilis praesentium, non suscipit sed vitae
-        minus blanditiis labore repudiandae id laudantium quae sit explicabo
-        cupiditate esse mollitia consequuntur cum sunt consequatur odit magnam
-        quia? Non autem vel consequuntur. Culpa, iusto deserunt tempora optio
-        fugiat veritatis sequi voluptatibus dicta magnam dignissimos harum
-        laboriosam quam natus consequatur nobis, exercitationem ducimus sed
-        rerum architecto possimus. Sint, tenetur! Vero culpa facilis doloremque?
-        Vitae repellendus iste optio cupiditate commodi sequi eum ad. Labore
-        natus minima repellendus a commodi inventore, voluptas maiores! Tempore
-        provident necessitatibus aspernatur. Natus id nisi dolorum quas libero
-        doloremque. Atque. Ratione, eum. Assumenda fugiat nisi ratione dolor
-        provident repudiandae, dolore ea blanditiis dignissimos voluptas impedit
-        reprehenderit enim? Id, aut tenetur. Error at quos numquam consectetur
-        voluptatum rem distinctio fugiat tenetur. Aspernatur, temporibus error
-        quo quibusdam odit nulla dolor asperiores. Nihil quas ratione minima
-        quisquam odio aspernatur enim consequatur tempora qui eaque a,
-        perspiciatis, optio nesciunt itaque quae distinctio aliquam placeat!
-        Nesciunt doloribus quae quibusdam eveniet quidem numquam accusamus,
-        consequuntur iure, sapiente facilis aut temporibus ratione, adipisci
-        fugit eius. Et veniam libero dolorem, quam illo explicabo reprehenderit
-        unde enim. Dolore, debitis! Excepturi obcaecati eveniet incidunt qui
-        voluptate ipsam, maiores laudantium praesentium voluptates quidem,
-        dolorem, quis vitae nemo assumenda earum dolore pariatur ab. Architecto,
-        quas officia aliquid quasi quam necessitatibus maxime accusamus?
-        Dignissimos nisi labore temporibus perspiciatis architecto tempora
-        corporis dolor debitis consequatur iusto soluta, tempore animi maxime.
-        Totam enim sapiente corrupti repudiandae illo, similique hic et?
-        Recusandae voluptatibus voluptate error laboriosam. Laboriosam
-        architecto ullam consequatur deleniti inventore voluptatibus corrupti
-        odit quo soluta. Iusto modi quo cum maiores quasi debitis facilis
-        laborum ratione voluptates illum nam veritatis, delectus vitae
-        reprehenderit dolores vero. Fugit, minus non neque optio nostrum
-        inventore eos, labore cum quasi provident, ipsam ipsum quod accusamus
-        placeat quia sunt at in animi id beatae consectetur error omnis
-        laudantium. Facilis, sed? Nemo, ut consectetur dolore, tempore facilis
-        corrupti dignissimos quis totam maiores eveniet iusto assumenda
-        accusamus pariatur sequi, voluptas cupiditate rem harum quaerat magnam
-        quo. Molestiae, maxime? Et, totam provident. Ad?
-      </div>
+    <main>
+      <article class="content">
+        <h2>Your Projects</h2>
+        <section class="projects">
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Super Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla
+              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Perferendis aliquam neque
+              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
+              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
+              doloremque ratione? Porro!
+            </p>
+            <div class="card-buttons">
+              <input type="image" src="./images/fork.svg" alt="Fork" />
+              <input type="image" src="./images/watch.svg" alt="Watch" />
+              <input type="image" src="./images/star.svg" alt="Star" />
+            </div>
+          </div>
+        </section>
+      </article>
+      <article class="side-content">
+        <section class="announcements">
+          <h2>Announcements</h2>
+          <ul class="side-card">
+            <li>
+              <h3>Site Maintenance</h3>
+              <p class="overflow">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quaerat, neque rem assumenda eos temporibus totam unde quae quod
+                consequatur pariatur odit perferendis? Exercitationem ipsa
+                tempora sint obcaecati! Culpa, atque odit.
+              </p>
+            </li>
+            <li>
+              <h3>Site Maintenance</h3>
+              <p class="overflow">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quaerat, neque rem assumenda eos temporibus totam unde quae quod
+                consequatur pariatur odit perferendis? Exercitationem ipsa
+                tempora sint obcaecati! Culpa, atque odit.
+              </p>
+            </li>
+            <li>
+              <h3>Site Maintenance</h3>
+              <p class="overflow">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quaerat, neque rem assumenda eos temporibus totam unde quae quod
+                consequatur pariatur odit perferendis? Exercitationem ipsa
+                tempora sint obcaecati! Culpa, atque odit.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="trending">
+          <h2>Trending</h2>
+          <ul class="side-card">
+            <li class="user-layout">
+              <img src="./images/hero.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@elnagar</div>
+              <div class="ul-bot-text">Super Cool Project</div>
+            </li>
+            <li class="user-layout">
+              <img src="./images/hero.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@elnagar</div>
+              <div class="ul-bot-text">Super Cool Project</div>
+            </li>
+            <li class="user-layout">
+              <img src="./images/hero.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@elnagar</div>
+              <div class="ul-bot-text">Super Cool Project</div>
+            </li>
+            <li class="user-layout">
+              <img src="./images/hero.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@elnagar</div>
+              <div class="ul-bot-text">Super Cool Project</div>
+            </li>
+          </ul>
+        </section>
+      </article>
     </main>
   </body>
 </html>
