--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon" />
   </head>
   <body>
     <header>
@@ -22,10 +23,15 @@
           alt="Profile"
           class="round-image"
         />
-        <a href="#">Mahmoud Elnagar</a>
+        <a
+          href="https://www.linkedin.com/in/mahmoud-elnagar1698/"
+          target="_blank"
+        >
+          Mahmoud Elnagar
+        </a>
       </div>
 
-      <div class="user-layout">
+      <div class="welcome user-layout">
         <img src="./images/hero.svg" alt="hero icon" class="round-image" />
         <p class="ul-top-text">Hi there,</p>
         <h2 class="ul-bot-text">Mahmoud Elnagar (@elnagar)</h2>
@@ -129,143 +135,289 @@
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
               cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              repellendus officiis at velit iste iure dolorum nisi nulla.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Sign up Form</h3>
             <p class="no-scroller" title="Project info">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              Long text, you can scroll. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Voluptas eos assumenda eius non, molestias ut
+              eaque eum delectus est tenetur quae. Accusantium eos ut ratione
+              delectus veniam deserunt iure Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Eos quas placeat itaque veniam sequi
+              laboriosam architecto possimus reprehenderit provident nam?
+              Quibusdam sit maiores sed excepturi dolorum doloribus debitis
+              officia maxime.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Calculator</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
               cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              repellendus officiis at velit iste iure dolorum nisi nulla.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Etch A Sketch</h3>
             <p class="no-scroller" title="Project info">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
-              cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              Long text, you can scroll. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Voluptas eos assumenda eius non, molestias ut
+              eaque eum delectus est tenetur quae. Accusantium eos ut ratione
+              delectus veniam deserunt iure Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Eos quas placeat itaque veniam sequi
+              laboriosam architecto possimus reprehenderit provident nam?
+              Quibusdam sit maiores sed excepturi dolorum doloribus debitis
+              officia maxime.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Rock Paper Scissors</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
               cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              repellendus officiis at velit iste iure dolorum nisi nulla.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Crypto Night</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
               cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              repellendus officiis at velit iste iure dolorum nisi nulla.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Recipes</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
               cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              repellendus officiis at velit iste iure dolorum nisi nulla.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
           <div class="card">
-            <h3>Super Cool Project</h3>
+            <h3>Ad Blocker</h3>
             <p class="no-scroller" title="Project info">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
               cupiditate ex explicabo nostrum dignissimos, assumenda vel
-              repellendus officiis at velit iste iure dolorum nisi nulla
-              provident! Velit molestias sit accusantium! Lorem ipsum dolor sit
-              amet consectetur adipisicing elit. Perferendis aliquam neque
-              pariatur eveniet. Soluta consequuntur hic, dolores consequatur
-              odio ipsum assumenda illo suscipit. Iure magnam nobis culpa
-              doloremque ratione? Porro!
+              repellendus officiis at velit iste iure dolorum nisi nulla.
             </p>
             <div class="card-buttons">
-              <input type="image" src="./images/fork.svg" alt="Fork" />
-              <input type="image" src="./images/watch.svg" alt="Watch" />
-              <input type="image" src="./images/star.svg" alt="Star" />
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Money Maker</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla.
+            </p>
+            <div class="card-buttons">
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Cool Project</h3>
+            <p class="no-scroller" title="Project info">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+              cupiditate ex explicabo nostrum dignissimos, assumenda vel
+              repellendus officiis at velit iste iure dolorum nisi nulla.
+            </p>
+            <div class="card-buttons">
+              <input
+                type="image"
+                src="./images/fork.svg"
+                alt="Fork"
+                title="Fork"
+              />
+              <input
+                type="image"
+                src="./images/watch.svg"
+                alt="Watch"
+                title="Watch"
+              />
+              <input
+                type="image"
+                src="./images/star.svg"
+                alt="Star"
+                title="Star"
+              />
             </div>
           </div>
         </section>
@@ -275,7 +427,9 @@
           <h2>Announcements</h2>
           <ul class="side-card">
             <li>
-              <h3>Site Maintenance</h3>
+              <h3>
+                <a href="#">Site Maintenance</a>
+              </h3>
               <p class="overflow">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Quaerat, neque rem assumenda eos temporibus totam unde quae quod
@@ -284,7 +438,9 @@
               </p>
             </li>
             <li>
-              <h3>Site Maintenance</h3>
+              <h3>
+                <a href="#">Community Share Day</a>
+              </h3>
               <p class="overflow">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Quaerat, neque rem assumenda eos temporibus totam unde quae quod
@@ -293,7 +449,9 @@
               </p>
             </li>
             <li>
-              <h3>Site Maintenance</h3>
+              <h3>
+                <a href="#">Updated Private Policy</a>
+              </h3>
               <p class="overflow">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Quaerat, neque rem assumenda eos temporibus totam unde quae quod
@@ -312,19 +470,19 @@
               <div class="ul-bot-text">Super Cool Project</div>
             </li>
             <li class="user-layout">
-              <img src="./images/hero.svg" alt="user" class="round-image" />
-              <div class="ul-top-text">@elnagar</div>
-              <div class="ul-bot-text">Super Cool Project</div>
+              <img src="./images/user1.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@morgan</div>
+              <div class="ul-bot-text">The Odin Project</div>
             </li>
             <li class="user-layout">
-              <img src="./images/hero.svg" alt="user" class="round-image" />
-              <div class="ul-top-text">@elnagar</div>
-              <div class="ul-bot-text">Super Cool Project</div>
+              <img src="./images/user2.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@sophia</div>
+              <div class="ul-bot-text">No Traffic Maker</div>
             </li>
             <li class="user-layout">
-              <img src="./images/hero.svg" alt="user" class="round-image" />
-              <div class="ul-top-text">@elnagar</div>
-              <div class="ul-bot-text">Super Cool Project</div>
+              <img src="./images/user3.svg" alt="user" class="round-image" />
+              <div class="ul-top-text">@tegan</div>
+              <div class="ul-bot-text">Travelling Guide</div>
             </li>
           </ul>
         </section>
