update project list

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <h2>Intermediate HTML and CSS</h2>
       <ul>
         <li>Project 1: <a href="./sign-up-form/index.html">Sign up Form</a></li>
+        <li>
+          Project 2: <a href="./admin-dashboard/index.html">Admin Dashboard</a>
+        </li>
       </ul>
     </section>
   </body>
